--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-MONGODB_URI=mongodb://appuser:apppassword@localhost:27017/messaging-app
+MONGODB_URI="mongodb://admin:password@localhost:27017,localhost:27018,localhost:27019/messaging-app?replicaSet=rs0"
 NODE_ENV=development
