--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,103 @@
 version: '3.8'
 
 services:
-  mongodb:
-    build: .
-    container_name: mongodb-messaging
+  mongodb-primary:
+    image: mongo:6
+    container_name: mongodb-primary
     restart: unless-stopped
     ports:
       - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: admin
       MONGO_INITDB_ROOT_PASSWORD: password
-      MONGO_INITDB_DATABASE: messaging-app
+      MONGO_INITDB_DATABASE: admin
+    entrypoint:
+      - bash
+      - -c
+      - |
+        cp /keyfile /mongo_keyfile
+        chmod 400 /mongo_keyfile
+        chown 999:999 /mongo_keyfile
+        exec docker-entrypoint.sh $$@
+    command: "mongod --bind_ip_all --replSet rs0 --keyFile /mongo_keyfile"
     volumes:
-      - mongodb_data:/data/db
-      - ./init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+      - mongodb_primary_data:/data/db
+      - ./keyfile:/keyfile
     networks:
       - messaging-network
 
+  mongodb-secondary1:
+    image: mongo:6
+    container_name: mongodb-secondary1
+    restart: unless-stopped
+    ports:
+      - "27018:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: admin
+    entrypoint:
+      - bash
+      - -c
+      - |
+        cp /keyfile /mongo_keyfile
+        chmod 400 /mongo_keyfile
+        chown 999:999 /mongo_keyfile
+        exec docker-entrypoint.sh $$@
+    command: "mongod --bind_ip_all --replSet rs0 --keyFile /mongo_keyfile"
+    volumes:
+      - mongodb_secondary1_data:/data/db
+      - ./keyfile:/keyfile
+    depends_on:
+      - mongodb-primary
+    networks:
+      - messaging-network
 
+  mongodb-secondary2:
+    image: mongo:6
+    container_name: mongodb-secondary2
+    restart: unless-stopped
+    ports:
+      - "27019:27017"
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: admin
+    entrypoint:
+      - bash
+      - -c
+      - |
+        cp /keyfile /mongo_keyfile
+        chmod 400 /mongo_keyfile
+        chown 999:999 /mongo_keyfile
+        exec docker-entrypoint.sh $$@
+    command: "mongod --bind_ip_all --replSet rs0 --keyFile /mongo_keyfile"
+    volumes:
+      - mongodb_secondary2_data:/data/db
+      - ./keyfile:/keyfile
+    depends_on:
+      - mongodb-primary
+    networks:
+      - messaging-network
+
+  mongodb-setup:
+    image: mongo:6
+    container_name: mongodb-setup
+    depends_on:
+      - mongodb-primary
+      - mongodb-secondary1
+      - mongodb-secondary2
+    restart: on-failure
+    entrypoint: ["/bin/bash", "/setup_mongo.sh"]
+    volumes:
+      - ./setup_mongo.sh:/setup_mongo.sh
+    networks:
+      - messaging-network
 
 volumes:
-  mongodb_data:
+  mongodb_primary_data:
+  mongodb_secondary1_data:
+  mongodb_secondary2_data:
 
 networks:
   messaging-network:
